Implement bookParking command
